[gd_scene load_steps=14 format=2]

[ext_resource path="res://Assets/Buttons/Level2.png" type="Texture" id=1]
[ext_resource path="res://Scripts/MainWorld.gd" type="Script" id=2]
[ext_resource path="res://Assets/Buttons/BG.png" type="Texture" id=3]
[ext_resource path="res://Assets/Buttons/Level3.png" type="Texture" id=4]
[ext_resource path="res://Assets/Buttons/Level4.png" type="Texture" id=5]
[ext_resource path="res://Assets/Buttons/Level1.png" type="Texture" id=6]
[ext_resource path="res://Assets/Buttons/BestTimeTotal.png" type="Texture" id=7]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Assets/Fonts/04B_30__.TTF"

[sub_resource type="DynamicFont" id=2]
size = 34
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 1 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://Assets/Fonts/04B_30__.TTF"

[sub_resource type="DynamicFont" id=4]
size = 17
outline_size = 1
outline_color = Color( 0.768627, 0.666667, 0.00784314, 1 )
font_data = SubResource( 3 )

[sub_resource type="DynamicFontData" id=5]
font_path = "res://Assets/Fonts/04B_30__.TTF"

[sub_resource type="DynamicFont" id=6]
size = 34
outline_size = 2
outline_color = Color( 0.396078, 0.396078, 0.396078, 1 )
font_data = SubResource( 5 )

[node name="World" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 3 )
centered = false

[node name="Buttons" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Button1" type="TextureButton" parent="Buttons"]
margin_left = 133.0
margin_top = 7.0
margin_right = 533.0
margin_bottom = 182.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 1 )
texture_disabled = ExtResource( 5 )

[node name="Level" type="Label" parent="Buttons/Button1"]
margin_left = 35.0
margin_top = 48.0
margin_right = 366.0
margin_bottom = 101.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0.513726, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_fonts/font = SubResource( 2 )
text = "Level 1"
align = 1
valign = 1

[node name="BestTime" type="Label" parent="Buttons/Button1"]
margin_left = 33.0
margin_top = 97.0
margin_right = 367.0
margin_bottom = 140.0
custom_colors/font_color = Color( 0.160784, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "Best Time: 0s"
align = 1
valign = 1

[node name="Button2" type="TextureButton" parent="Buttons"]
margin_left = 557.0
margin_top = 7.0
margin_right = 957.0
margin_bottom = 182.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 1 )
texture_disabled = ExtResource( 5 )

[node name="Level" type="Label" parent="Buttons/Button2"]
margin_left = 35.0
margin_top = 48.0
margin_right = 366.0
margin_bottom = 101.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0.513726, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_fonts/font = SubResource( 2 )
text = "Level 1"
align = 1
valign = 1

[node name="BestTime" type="Label" parent="Buttons/Button2"]
margin_left = 33.0
margin_top = 97.0
margin_right = 367.0
margin_bottom = 140.0
custom_colors/font_color = Color( 0.160784, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "Best Time: 0s"
align = 1
valign = 1

[node name="Button3" type="TextureButton" parent="Buttons"]
margin_left = 981.0
margin_top = 7.0
margin_right = 1381.0
margin_bottom = 182.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 1 )
texture_disabled = ExtResource( 5 )

[node name="Level" type="Label" parent="Buttons/Button3"]
margin_left = 35.0
margin_top = 48.0
margin_right = 366.0
margin_bottom = 101.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0.513726, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_fonts/font = SubResource( 2 )
text = "Level 1"
align = 1
valign = 1

[node name="BestTime" type="Label" parent="Buttons/Button3"]
margin_left = 33.0
margin_top = 97.0
margin_right = 367.0
margin_bottom = 140.0
custom_colors/font_color = Color( 0.160784, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "Best Time: 0s"
align = 1
valign = 1

[node name="Button4" type="TextureButton" parent="Buttons"]
margin_left = 1405.0
margin_top = 7.0
margin_right = 1805.0
margin_bottom = 182.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 1 )
texture_disabled = ExtResource( 5 )

[node name="Level" type="Label" parent="Buttons/Button4"]
margin_left = 35.0
margin_top = 48.0
margin_right = 366.0
margin_bottom = 101.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0.513726, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_fonts/font = SubResource( 2 )
text = "Level 1"
align = 1
valign = 1

[node name="BestTime" type="Label" parent="Buttons/Button4"]
margin_left = 33.0
margin_top = 97.0
margin_right = 367.0
margin_bottom = 140.0
custom_colors/font_color = Color( 0.160784, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "Best Time: 0s"
align = 1
valign = 1

[node name="Button5" type="TextureButton" parent="Buttons"]
margin_left = 133.0
margin_top = 183.0
margin_right = 533.0
margin_bottom = 358.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 1 )
texture_disabled = ExtResource( 5 )

[node name="Level" type="Label" parent="Buttons/Button5"]
margin_left = 35.0
margin_top = 48.0
margin_right = 366.0
margin_bottom = 101.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0.513726, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_fonts/font = SubResource( 2 )
text = "Level 1"
align = 1
valign = 1

[node name="BestTime" type="Label" parent="Buttons/Button5"]
margin_left = 33.0
margin_top = 97.0
margin_right = 367.0
margin_bottom = 140.0
custom_colors/font_color = Color( 0.160784, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "Best Time: 0s"
align = 1
valign = 1

[node name="Button6" type="TextureButton" parent="Buttons"]
margin_left = 557.0
margin_top = 183.0
margin_right = 957.0
margin_bottom = 358.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 1 )
texture_disabled = ExtResource( 5 )

[node name="Level" type="Label" parent="Buttons/Button6"]
margin_left = 35.0
margin_top = 48.0
margin_right = 366.0
margin_bottom = 101.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0.513726, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_fonts/font = SubResource( 2 )
text = "Level 1"
align = 1
valign = 1

[node name="BestTime" type="Label" parent="Buttons/Button6"]
margin_left = 33.0
margin_top = 97.0
margin_right = 367.0
margin_bottom = 140.0
custom_colors/font_color = Color( 0.160784, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "Best Time: 0s"
align = 1
valign = 1

[node name="Button7" type="TextureButton" parent="Buttons"]
margin_left = 981.0
margin_top = 183.0
margin_right = 1381.0
margin_bottom = 358.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 1 )
texture_disabled = ExtResource( 5 )

[node name="Level" type="Label" parent="Buttons/Button7"]
margin_left = 35.0
margin_top = 48.0
margin_right = 366.0
margin_bottom = 101.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0.513726, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_fonts/font = SubResource( 2 )
text = "Level 1"
align = 1
valign = 1

[node name="BestTime" type="Label" parent="Buttons/Button7"]
margin_left = 33.0
margin_top = 97.0
margin_right = 367.0
margin_bottom = 140.0
custom_colors/font_color = Color( 0.160784, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "Best Time: 0s"
align = 1
valign = 1

[node name="Button8" type="TextureButton" parent="Buttons"]
margin_left = 1405.0
margin_top = 183.0
margin_right = 1805.0
margin_bottom = 358.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 1 )
texture_disabled = ExtResource( 5 )

[node name="Level" type="Label" parent="Buttons/Button8"]
margin_left = 35.0
margin_top = 48.0
margin_right = 366.0
margin_bottom = 101.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0.513726, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_fonts/font = SubResource( 2 )
text = "Level 1"
align = 1
valign = 1

[node name="BestTime" type="Label" parent="Buttons/Button8"]
margin_left = 33.0
margin_top = 97.0
margin_right = 367.0
margin_bottom = 140.0
custom_colors/font_color = Color( 0.160784, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "Best Time: 0s"
align = 1
valign = 1

[node name="Button9" type="TextureButton" parent="Buttons"]
margin_left = 133.0
margin_top = 351.0
margin_right = 533.0
margin_bottom = 526.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 1 )
texture_disabled = ExtResource( 5 )

[node name="Level" type="Label" parent="Buttons/Button9"]
margin_left = 35.0
margin_top = 48.0
margin_right = 366.0
margin_bottom = 101.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0.513726, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_fonts/font = SubResource( 2 )
text = "Level 1"
align = 1
valign = 1

[node name="BestTime" type="Label" parent="Buttons/Button9"]
margin_left = 33.0
margin_top = 97.0
margin_right = 367.0
margin_bottom = 140.0
custom_colors/font_color = Color( 0.160784, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "Best Time: 0s"
align = 1
valign = 1

[node name="Button10" type="TextureButton" parent="Buttons"]
margin_left = 557.0
margin_top = 351.0
margin_right = 957.0
margin_bottom = 526.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 1 )
texture_disabled = ExtResource( 5 )

[node name="Level" type="Label" parent="Buttons/Button10"]
margin_left = 35.0
margin_top = 48.0
margin_right = 366.0
margin_bottom = 101.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0.513726, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_fonts/font = SubResource( 2 )
text = "Level 1"
align = 1
valign = 1

[node name="BestTime" type="Label" parent="Buttons/Button10"]
margin_left = 33.0
margin_top = 97.0
margin_right = 367.0
margin_bottom = 140.0
custom_colors/font_color = Color( 0.160784, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "Best Time: 0s"
align = 1
valign = 1

[node name="Button11" type="TextureButton" parent="Buttons"]
margin_left = 981.0
margin_top = 351.0
margin_right = 1381.0
margin_bottom = 526.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 1 )
texture_disabled = ExtResource( 5 )

[node name="Level" type="Label" parent="Buttons/Button11"]
margin_left = 35.0
margin_top = 48.0
margin_right = 366.0
margin_bottom = 101.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0.513726, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_fonts/font = SubResource( 2 )
text = "Level 1"
align = 1
valign = 1

[node name="BestTime" type="Label" parent="Buttons/Button11"]
margin_left = 33.0
margin_top = 97.0
margin_right = 367.0
margin_bottom = 140.0
custom_colors/font_color = Color( 0.160784, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "Best Time: 0s"
align = 1
valign = 1

[node name="Button12" type="TextureButton" parent="Buttons"]
margin_left = 1405.0
margin_top = 351.0
margin_right = 1805.0
margin_bottom = 526.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 1 )
texture_disabled = ExtResource( 5 )

[node name="Level" type="Label" parent="Buttons/Button12"]
margin_left = 35.0
margin_top = 48.0
margin_right = 366.0
margin_bottom = 101.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0.513726, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_fonts/font = SubResource( 2 )
text = "Level 1"
align = 1
valign = 1

[node name="BestTime" type="Label" parent="Buttons/Button12"]
margin_left = 33.0
margin_top = 97.0
margin_right = 367.0
margin_bottom = 140.0
custom_colors/font_color = Color( 0.160784, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "Best Time: 0s"
align = 1
valign = 1

[node name="Button13" type="TextureButton" parent="Buttons"]
margin_left = 133.0
margin_top = 527.0
margin_right = 533.0
margin_bottom = 702.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 1 )
texture_disabled = ExtResource( 5 )

[node name="Level" type="Label" parent="Buttons/Button13"]
margin_left = 35.0
margin_top = 48.0
margin_right = 366.0
margin_bottom = 101.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0.513726, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_fonts/font = SubResource( 2 )
text = "Level 1"
align = 1
valign = 1

[node name="BestTime" type="Label" parent="Buttons/Button13"]
margin_left = 33.0
margin_top = 97.0
margin_right = 367.0
margin_bottom = 140.0
custom_colors/font_color = Color( 0.160784, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "Best Time: 0s"
align = 1
valign = 1

[node name="Button14" type="TextureButton" parent="Buttons"]
margin_left = 557.0
margin_top = 527.0
margin_right = 957.0
margin_bottom = 702.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 1 )
texture_disabled = ExtResource( 5 )

[node name="Level" type="Label" parent="Buttons/Button14"]
margin_left = 35.0
margin_top = 48.0
margin_right = 366.0
margin_bottom = 101.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0.513726, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_fonts/font = SubResource( 2 )
text = "Level 1"
align = 1
valign = 1

[node name="BestTime" type="Label" parent="Buttons/Button14"]
margin_left = 33.0
margin_top = 97.0
margin_right = 367.0
margin_bottom = 140.0
custom_colors/font_color = Color( 0.160784, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "Best Time: 0s"
align = 1
valign = 1

[node name="Button15" type="TextureButton" parent="Buttons"]
margin_left = 981.0
margin_top = 527.0
margin_right = 1381.0
margin_bottom = 702.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 1 )
texture_disabled = ExtResource( 5 )

[node name="Level" type="Label" parent="Buttons/Button15"]
margin_left = 35.0
margin_top = 48.0
margin_right = 366.0
margin_bottom = 101.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0.513726, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_fonts/font = SubResource( 2 )
text = "Level 1"
align = 1
valign = 1

[node name="BestTime" type="Label" parent="Buttons/Button15"]
margin_left = 33.0
margin_top = 97.0
margin_right = 367.0
margin_bottom = 140.0
custom_colors/font_color = Color( 0.160784, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "Best Time: 0s"
align = 1
valign = 1

[node name="Button16" type="TextureButton" parent="Buttons"]
margin_left = 1405.0
margin_top = 527.0
margin_right = 1805.0
margin_bottom = 702.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 1 )
texture_disabled = ExtResource( 5 )

[node name="Level" type="Label" parent="Buttons/Button16"]
margin_left = 35.0
margin_top = 48.0
margin_right = 366.0
margin_bottom = 101.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0.513726, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_fonts/font = SubResource( 2 )
text = "Level 1"
align = 1
valign = 1

[node name="BestTime" type="Label" parent="Buttons/Button16"]
margin_left = 33.0
margin_top = 97.0
margin_right = 367.0
margin_bottom = 140.0
custom_colors/font_color = Color( 0.160784, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "Best Time: 0s"
align = 1
valign = 1

[node name="Button17" type="TextureButton" parent="Buttons"]
margin_left = 133.0
margin_top = 687.0
margin_right = 533.0
margin_bottom = 862.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 1 )
texture_disabled = ExtResource( 5 )

[node name="Level" type="Label" parent="Buttons/Button17"]
margin_left = 35.0
margin_top = 48.0
margin_right = 366.0
margin_bottom = 101.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0.513726, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_fonts/font = SubResource( 2 )
text = "Level 1"
align = 1
valign = 1

[node name="BestTime" type="Label" parent="Buttons/Button17"]
margin_left = 33.0
margin_top = 97.0
margin_right = 367.0
margin_bottom = 140.0
custom_colors/font_color = Color( 0.160784, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "Best Time: 0s"
align = 1
valign = 1

[node name="Button18" type="TextureButton" parent="Buttons"]
margin_left = 557.0
margin_top = 687.0
margin_right = 957.0
margin_bottom = 862.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 1 )
texture_disabled = ExtResource( 5 )

[node name="Level" type="Label" parent="Buttons/Button18"]
margin_left = 35.0
margin_top = 48.0
margin_right = 366.0
margin_bottom = 101.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0.513726, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_fonts/font = SubResource( 2 )
text = "Level 1"
align = 1
valign = 1

[node name="BestTime" type="Label" parent="Buttons/Button18"]
margin_left = 33.0
margin_top = 97.0
margin_right = 367.0
margin_bottom = 140.0
custom_colors/font_color = Color( 0.160784, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "Best Time: 0s"
align = 1
valign = 1

[node name="Button19" type="TextureButton" parent="Buttons"]
margin_left = 981.0
margin_top = 687.0
margin_right = 1381.0
margin_bottom = 862.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 1 )
texture_disabled = ExtResource( 5 )

[node name="Level" type="Label" parent="Buttons/Button19"]
margin_left = 35.0
margin_top = 48.0
margin_right = 366.0
margin_bottom = 101.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0.513726, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_fonts/font = SubResource( 2 )
text = "Level 1"
align = 1
valign = 1

[node name="BestTime" type="Label" parent="Buttons/Button19"]
margin_left = 33.0
margin_top = 97.0
margin_right = 367.0
margin_bottom = 140.0
custom_colors/font_color = Color( 0.160784, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "Best Time: 0s"
align = 1
valign = 1

[node name="Button20" type="TextureButton" parent="Buttons"]
margin_left = 1405.0
margin_top = 687.0
margin_right = 1805.0
margin_bottom = 862.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 1 )
texture_disabled = ExtResource( 5 )

[node name="Level" type="Label" parent="Buttons/Button20"]
margin_left = 35.0
margin_top = 48.0
margin_right = 366.0
margin_bottom = 101.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0.513726, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_fonts/font = SubResource( 2 )
text = "Level 1"
align = 1
valign = 1

[node name="BestTime" type="Label" parent="Buttons/Button20"]
margin_left = 33.0
margin_top = 97.0
margin_right = 367.0
margin_bottom = 140.0
custom_colors/font_color = Color( 0.160784, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "Best Time: 0s"
align = 1
valign = 1

[node name="TotalTime" type="Sprite" parent="."]
position = Vector2( 970, 972 )
texture = ExtResource( 7 )

[node name="TimeLabel" type="Label" parent="."]
margin_left = 715.0
margin_top = 892.0
margin_right = 1225.0
margin_bottom = 1051.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0.72549, 0.929412, 0.0313726, 1 )
custom_fonts/font = SubResource( 6 )
text = "Total Time: 
18595s"
align = 1
valign = 1
